--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,3 +1,4 @@
+# author : pro@eunoia
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
 
 # Import additional configuration files
@@ -30,16 +31,16 @@ window:
   # must be at least `2`, while using a value of `0` for columns and lines will
   # fall back to the window manager's recommended size.
   dimensions:
-    columns: 127
-    lines: 29
+    columns: 110
+    lines: 25
 
   # Window position (changes require restart)
   #
   # Specified in number of pixels.
   # If the position is not set, the window manager will handle the placement.
   position:
-    x: 7
-    y: 2
+    x: 0
+    y: 0
 
   # Window padding (changes require restart)
   #
@@ -67,7 +68,7 @@ window:
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 0.85
+  opacity: 0.97
 
   # Startup Mode (changes require restart)
   #
@@ -78,7 +79,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: Windowed 
+  startup_mode: Maximized 
 
   # Window title
   title: Alacritty
@@ -156,7 +157,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 19 
+  size: 17
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -932,4 +933,3 @@ cursor:
 
   # Print all received window events.
   #print_events: false
-
